# vpd111.api.com/app/Models/Product.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Product extends Model
+{
+    protected $table = 'products';
+
+    use HasFactory;
+    protected $fillable = [
+        'name',
+        'description',
+        'price',
+        'quantity',
+        'category_id',
+    ];
+    public function category()
+    {
+        return $this->belongsTo(Categories::class);
+    }
+
+    public function product_images()
+    {
+        return $this->hasMany(ProductImage::class);
+    }
+}
