# vpd111.api.com/config/auth.php
@@ -40,12 +40,7 @@ return [
             'driver' => 'session',
             'provider' => 'users',
         ],
-        'api' => [
-            'driver' => 'jwt',
-            'provider' => 'users',
-        ],
     ],
-
 
     /*
     |--------------------------------------------------------------------------
@@ -69,7 +64,6 @@ return [
             'driver' => 'eloquent',
             'model' => App\Models\User::class,
         ],
-
 
         // 'users' => [
         //     'driver' => 'database',
