# vpd111.api.com/routes/api.php
@@ -2,6 +2,9 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use \App\Http\Controllers\API\CategoryController;
+use \App\Http\Controllers\API\AuthController;
+use \App\Http\Controllers\API\ProductController;
 
 /*
 |--------------------------------------------------------------------------
@@ -18,15 +21,15 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::get("categories", [\App\Http\Controllers\API\CategoryController::class, 'getAll']);
-Route::post("categories/create", [\App\Http\Controllers\API\CategoryController::class, 'create']);
-Route::get('/categories/{id}', [\App\Http\Controllers\API\CategoryController::class, 'getById']);
-Route::delete("/categories/{id}", [\App\Http\Controllers\API\CategoryController::class, "delete"]);
-Route::post("/categories/edit/{id}", [\App\Http\Controllers\API\CategoryController::class, "edit"]);
-Route::get("categories/upload/{filename}", [\App\Http\Controllers\API\CategoryController::class, 'upload']);
+Route::get("categories", [CategoryController::class, 'getAll']);
+Route::post("categories/create", [CategoryController::class, 'create']);
+Route::get('/categories/{id}', [CategoryController::class, 'getById']);
+Route::delete("/categories/{id}", [CategoryController::class, "delete"]);
+Route::post("/categories/edit/{id}", [CategoryController::class, "edit"]);
+Route::get("categories/upload/{filename}", [CategoryController::class, 'upload']);
 
-Route::post("register", [\App\Http\Controllers\API\AuthController::class, 'register']);
-Route::post("login", [\App\Http\Controllers\API\AuthController::class, 'login']);
+Route::post("register", [AuthController::class, 'register']);
+Route::post("login", [AuthController::class, 'login']);
 
-Route::post('/oauth/{provider}', 'AuthController@redirectToProvider');
-Route::get('/oauth/{provider}/callback', 'AuthController@handleProviderCallback');
+Route::post("product", [ProductController::class, 'create']);
+Route::get('products',[ProductController::class, 'getAll']);
